[feat]: health polity
